chat agregado
OB# with '#' will be ignored, and an empty message aborts the commit.